API - Cookies
- removed endpoint `/api/v1/cookie-providers/{project}`
- providers have been moved into cookies API
