# src/Api/V1/Controller/CookiesController.php
@@ -6,10 +6,12 @@ namespace App\Api\V1\Controller;
 
 use Apitte\Core\Http\ApiRequest;
 use Apitte\Core\Http\ApiResponse;
+use App\ReadModel\Project\ProjectView;
+use App\ReadModel\Cookie\CookieApiView;
+use App\Domain\Shared\ValueObject\Locale;
 use Apitte\Core\Annotation\Controller as Api;
-use App\Domain\Project\ValueObject\ProjectId;
-use App\ReadModel\Project\ProjectExistsQuery;
 use App\ReadModel\Cookie\FindCookiesForApiQuery;
+use App\ReadModel\Project\GetProjectByCodeQuery;
 use App\Api\V1\RequestBody\GetCookiesRequestBody;
 use SixtyEightPublishers\ArchitectureBundle\Bus\QueryBusInterface;
 use SixtyEightPublishers\ArchitectureBundle\ReadModel\Query\Batch;
@@ -66,12 +68,12 @@ final class CookiesController extends AbstractV1Controller
 	 */
 	public function get(ApiRequest $request, ApiResponse $response): ApiResponse
 	{
-		$projectId = $this->queryBus->dispatch(ProjectExistsQuery::byCode($request->getParameter('project')));
+		$project = $this->queryBus->dispatch(GetProjectByCodeQuery::create($request->getParameter('project')));
 
 		$requestEntity = $request->getEntity();
 		assert($requestEntity instanceof GetCookiesRequestBody);
 
-		if (!$projectId instanceof ProjectId) {
+		if (!$project instanceof ProjectView) {
 			return $response->withStatus(ApiResponse::S422_UNPROCESSABLE_ENTITY)
 				->writeJsonBody([
 					'status' => 'error',
@@ -82,8 +84,16 @@ final class CookiesController extends AbstractV1Controller
 				]);
 		}
 
-		$data = [];
-		$query = FindCookiesForApiQuery::create($projectId->toString(), $requestEntity->locale)
+		$locale = NULL !== $requestEntity->locale && $project->locales->locales()->has(Locale::fromValue($requestEntity->locale))
+			? Locale::fromValue($requestEntity->locale)
+			: $project->locales->defaultLocale();
+
+		$data = [
+			'providers' => [],
+			'cookies' => [],
+		];
+
+		$query = FindCookiesForApiQuery::create($project->id->toString(), $project->locales->defaultLocale()->equals($locale) ? NULL : $locale->value())
 			->withBatchSize(100);
 
 		if (NULL !== $requestEntity->category) {
@@ -94,9 +104,22 @@ final class CookiesController extends AbstractV1Controller
 			assert($batch instanceof Batch);
 
 			foreach ($batch->results() as $result) {
-				$data[] = $result;
+				assert($result instanceof CookieApiView);
+
+				$data['cookies'][] = $result->serializeCookie($locale->value());
+
+				if (!isset($data['providers'][$result->cookieProviderCode->value()])) {
+					$data['providers'][$result->cookieProviderCode->value()] = $result->serializeCookieProvider();
+				}
 			}
 		}
+
+		$providers = array_values($data['providers']);
+		$providerNames = array_column($providers, 'name');
+
+		array_multisort($providerNames, SORT_ASC, $providers);
+
+		$data['providers'] = $providers;
 
 		return $response->withStatus(ApiResponse::S200_OK)
 			->writeJsonBody([
